# advent-of-code

./: .justfile  README.md  pyproject.toml
2024/2/: main.py  question.html
2024/2/question_files/: js
2024/3/: main.py
2024/6/: main.py
2024/8/: main.py
