[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Taylor Agarwal <taylor.agarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.8.1"

[tool.ruff]
line-length = 200

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
